tests/diagnostics/catalog/snapshots/ir/IR0024.snap
error[IR0024]: IR_E_IMPORT_CYCLE
 --> tests/diagnostics/catalog/sources/ir/IR0024.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0024
  = help: keep IR validation diagnostics structured and catalog-backed
